Add search by Code query
