# src/main/resources/openapi/to-do-list-openapi.yaml
@@ -131,6 +131,32 @@ paths:
           $ref: '#/components/responses/NotFound'
         '500':
           $ref: '#/components/responses/InternalServerError'
+  /search-to-do-list:
+    get:
+      tags:
+        - To Do List CRUD
+      summary: Serch by Code
+      description: Get a search To Do List by Code.
+      operationId: findBySearch
+      parameters:
+        - $ref: '#/components/parameters/Search'
+      responses:
+        '200':
+          description: The search list of To Do List.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ToDoList'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
 
 components:
   parameters:
@@ -154,6 +180,12 @@ components:
       schema:
         type: integer
         format: int64
+    Search:
+      name: search
+      description: The search of the page to get.
+      in: query
+      schema:
+        type: string
 
   responses:
     BadRequest:
